+ patch #2665440 Detect mcrypt initialization failure
+ [lang] Galician update, thanks to Xosé Calvo - xosecalvo
+ [lang] Swedish update, thanks to Björn T. Hallberg
+ [lang] Norwegian update, thanks to Sven-Erik Andersen 
+ [lang] Catalan update, thanks to Xavier Navarro
+ [lang] Finnish update, thanks to Jouni Kahkonen

3.1.6.0 (not yet released)
- bug #2785912 [doc] no ON UPDATE CURRENT_TIMESTAMP in list of attributes

3.1.5.0 (2009-05-15)
- patch #2739001 [export] XML does not allow spaces in element names, 
  thanks to Derek Schaefer - drummingds1
- bug #2780722 [import] Incorrect maximum file size
- bug #2780356 [calendar] Null checkbox not unchecked when date is chosen 
- bug [calendar] js error "window.parent.addEvent is not a function" 
- patch #2773818 [export] Invalid "Content-Encoding" header,
  thanks to abignale - abignale
- bug #2787162 [interface] Table with name 'log_views' is incorrectly displayed as a view
- bug #2784400 [parser] INVOKER not understood by parser 
- [core] Compatibility with PHP 5.3.0RC2 

3.1.4.0 (2009-04-25)
+ patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
  thanks to JT Justman - jtjustman
- bug #2491017 [operations] ANSI mode not supported (db rename and table move) 
- bug #2609346 [operations] Fix copying views.
- rfe #2127983 Readd documentation link, it does not protect against anything.
- bug #1675249 [doc] Apache reverse proxy and cookies FAQ
- bug #2682140 UUID() and CURRENT_USER() should not accept arguments
- patch #2682833 [core] Fatal error: Call to a member function isDisplayed(),
  thanks to Christian Rodriguez - judas_iscariote
- patch #2702772 [lang] Duplicate sentence in Polish,
  thanks to Pawel Smolinski - zipoking
- patch #2709040 [doc] Wrong link in ChangeLog formatter,
  thanks to Petr Vorel - pevik
- patch #2715417 [interface] Fixed truncation of enum/set values containing parenthesis
  thanks to Marco Moreno - mmoreno
+ [lang] Spanish update, thanks to Daniel Hinostroza