@@ -58,6 +58,7 @@ $strAlterOrderBy = 'Tábla rendezésének módosítása e szerint:';
 $strAnalyze = 'Elemzés';
 $strAnalyzeTable = 'Tábla elemzése';
 $strAnd = 'És';
+$strAndSmall = 'és';
 $strAndThen = 'és utána';
 $strAngularLinks = 'Összeférhetetlen hivatkozások';
 $strAnIndex = 'Az index hozzáadása a(z) %s mezőn megtörtént';
@@ -167,6 +168,7 @@ $strCompleteInserts = 'Teljes beszúrások';
 $strCompression = 'Tömörítés';
 $strCompressionWillBeDetected = 'Az importált fájl tömörítése automatikusan felismerésre kerül a következőből: %s';
 $strConfigDefaultFileError = 'Nem lehetett betölteni az alapértelmezett konfigurációt innen: "%1$s"';
+$strConfigDirectoryWarning = 'A parancsfájl által használt [code]config[/code] könyvtár még létezik a phpMyAdmin könyvtárában. Távolítsa el a phpMyAdmin beállítása után.';
 $strConfigFileError = 'Nem tudta beolvasni a konfigurációs fájlt a phpMyAdmin!<br />Ez azért fordulhatott elő, mert a PHP elemzési hibát talált benne, vagy nem találta a fájlt.<br />Hívja meg közvetlenül a konfigurációs fájlt az alábbi hivatkozással, és olvassa el a kapott PHP üzenet)ek)et. Többnyire idézőjel vagy pontosvessző hiányzik valahol.<br />Ha üres oldalt kap, akkor minden rendben.';
 $strConfigureTableCoord = 'Állítsa be a(z) %s tábla koordinátáit';
 $strConnectionError = 'Nem lehet csatlakozni: érvénytelenek a beállítások.';
@@ -194,6 +196,7 @@ $strCreateTable  = 'Tábla létrehozása';
 $strCreateUserDatabase = 'Adatbázis a felhasználó számára';
 $strCreateUserDatabaseName = 'Azonos nevű adatbázis létrehozása, és az összes jog engedélyezése';
 $strCreateUserDatabaseNone = 'Nincs';
+$strCreateUserDatabasePrivileges = 'Az összes jog engedélyezése a(z) &quot;%s&quot; adatbázison';
 $strCreateUserDatabaseWildcard = 'Az összes jog engedélyezése karakterhelyettesítős néven (username\_%)';
 $strCreationDates = 'Létrehozás/módosítás/ellenőrzés dátuma';
 $strCriteria = 'Feltételek';
@@ -256,6 +259,7 @@ $strDisplayPDF = 'PDF séma megjelenítése';
 $strDoAQuery = 'Egy "példa szerinti lekérdezés" végrehajtása (karakterhelyettesítő: "%")';
 $strDocSQL = 'DocSQL';
 $strDocu = 'Dokumentáció';
+$strDoNotAutoIncrementZeroValues = 'Az AUTO_INCREMENT nulla értékekhez nincs használatban';
 $strDownloadFile = 'Fájl letöltése';
 $strDoYouReally = 'Valóban a következőt akarja ';
 $strDropDatabaseStrongWarning = 'Ön a teljes adatbázis MEGSEMMISÍTÉSÉRE készül!';
@@ -342,6 +346,7 @@ $strGeneratePassword = 'Jelszó generálása';
 $strGenTime = 'Létrehozás ideje';
 $strGeorgian = 'Grúz';
 $strGerman = 'Német';
+$strGetMoreThemes = 'Több téma letöltése';
 $strGlobal = 'globális';
 $strGlobalPrivileges = 'Globális jogok';
 $strGlobalValue = 'Globális változó';
@@ -352,7 +357,7 @@ $strGzip = '"gzip tömörítés"';
 
 $strHandler = 'Kezelő';
 $strHasBeenAltered = 'megváltozott.';
-$strHaveToShow = 'Ki kell legalább egy megjelenítendő oszlopot választanod';
+$strHaveToShow = 'Ki kell legalább egy megjelenítendő oszlopot választania';
 $strHebrew = 'Héber';
 $strHelp = 'Súgó';
 $strHexForBLOB = 'Hexadecimális értékek használata a BLOB művelethez';
@@ -363,6 +368,7 @@ $strHome = 'Kezdőlap';
 $strHomepageOfficial = 'Hivatalos honlap';
 $strHostEmpty = 'A hosztnév üres!';
 $strHost = 'Hoszt';
+$strHostTableExplanation = 'A Host tábla használatakor ez a mező mellőzésre kerül, s a Host táblában lévő értékek kerülnek felhaszsnálásra.';
 $strHTMLExcel = 'Microsoft Excel 2000';
 $strHTMLWord = 'Microsoft Word 2000';
 $strHungarian = 'Magyar';
@@ -457,6 +463,7 @@ $strLocalhost = 'Helyi';
 $strLocationTextfile = 'A szövegfájl helye';
 $strLogin = 'Belépés';
 $strLoginInformation = 'Bejelentkezési adatok';
+$strLoginWithoutPassword = 'A konfiguráció tiltja a jelszó nélküli bejelentkezést (lásd AllowNoPassword)';
 $strLogout = 'Kilépés';
 $strLogPassword = 'Jelszó:';
 $strLogServerHelp = 'Az állomásnevet/IP-címet és a port számát szóközzel elválasztva írhatja be.';
@@ -522,6 +529,7 @@ $strNoFrames = 'A phpMyAdmin <b>keretkezelő</b> böngészőben használhatóbb.
 $strNoIndex = 'Nincs meghatározott index!';
 $strNoIndexPartsDefined = 'Nincs meghatározott indexrész!';
 $strNoModification = 'Nincs változás';
+$strNoneDefault = 'Nincs';
 $strNo = 'Nem';
 $strNone = 'Nincs';
 $strNoOptions = 'Ennek a formátumnak nincsenek beállításai';
@@ -704,6 +712,7 @@ $strRelationView = 'Kapcsolat nézete';
 $strReloadingThePrivileges = 'A jogok újratöltése';
 $strReloadPrivileges = 'Jogok újratöltése';
 $strReload = 'Újratöltés';
+$strRemoveCRLF = 'A mezőkben lévő CRLF karakterek eltávolítása';
 $strRemovePartitioning = 'Particionálás eltávolítása';
 $strRemoveSelectedUsers = 'A kijelölt felhasználók törlése';
 $strRenameDatabaseOK = 'A(z) %s adatbázis átnevezése %s névre megtörtént';
@@ -713,6 +722,10 @@ $strRepair = 'Javítás';
 $strRepairTable = 'Tábla javítása';
 $strReplaceNULLBy = 'NULL cseréje ezzel:';
 $strReplaceTable = 'A táblaadatok lecserélése fájlra';
+$strReplicationStatusInfo = 'Ez a MySQL-szerver mint %s működik a <b>többszörözéses</b> folyamatban. A szerveren lévő többszörözéses állapotról a <a href="#replication">többszörözés részben</a> kaphat bővebb információt.';
+$strReplicationStatus_master = 'Mester állapot';
+$strReplicationStatus_slave = 'Másodlagos állapot';
+$strReplicationStatus = 'Többszörözéses állapot';
 $strReplication = 'Többszörözés';
 $strReset = 'Alaphelyzet';
 $strResourceLimits = 'Erőforrás-korlátozások';
@@ -780,6 +793,7 @@ $strServerTabVariables = 'Változók';
 $strServerTrafficNotes = '<b>Szerver forgalma</b>: Ezek a táblázatok a MySQL szerver hálózati forgalmának statisztikájáit mutatják az indítástól kezdve.';
 $strServerVars = 'Szerver változók és beállítások';
 $strServerVersion = 'Szerver verzió';
+$strSessionGCWarning = 'A [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] paraméter alacsonyabb a phpMyAdminban beállított cookie érvényességénél, Emiatt a bejelentkezése a phpMyAdminban beállítottnál előbb fog lejárni.';
 $strSessionStartupErrorGeneral = 'A munkamenet nem indítható hibák nélkül. Ellenőrizze a PHP és/vagy a webszerver naplófájljába bejegyzett hibákat, és konfigurálja megfelelően a PHP telepítését.';
 $strSessionValue = 'Munkamenet értéke';
 $strSetEnumVal = 'Ha a mező típusa "enum" vagy "set", akkor az értékeket ilyen formában írja be: \'a\',\'b\',\'c\'...<br />Ha fordított perjelet ("\") vagy aposztrófot ("\'") akar ezekben az értékekben használni, akkor fordított perjellel kezdje (pl.: \'\\\\xyz\' vagy \'a\\\'b\').';
@@ -1005,11 +1019,13 @@ $strSetupSaveDir_desc = 'A könyvtár, melybe az exportálások menthetők a sze
 $strSetupSaveDir_name = 'Mentési könyvtár';
 $strSetupServerAuthConfigMsg = 'Ön a [kbd]konfigurációs[/kbd] hitelesítési típust állította be, s az automatikus bejelentkezéshez megadta a felhasználónevet és a jelszót, ami működő állomások esetén nemkívánatos beállítás. Bárki, aki tudja vagy kitalálja a phpMyAdmin URL-címét, közvetlenül hozzá tud férni a phpMyAdmin panelhoz. Állítsa [kbd]cookie[/kbd] vagy [kbd]http[/kbd] módra a [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]hitelesítési típust[/a].';
 $strSetupServerExtensionMsg = 'Teljesítmény okokból használja a mysqli kiterjesztést';
+$strSetupServerNoPasswordMsg = 'Ön engedélyezi a jelszó nélküli csatlakozást a szerverhez.';
 $strSetupServersAdd = 'Új szerver hozzáadása';
 $strSetupServers_AllowDeny_order_desc = 'Hagyja üresen, ha nem használja';
 $strSetupServers_AllowDeny_order_name = 'Az állomás hitelesítési sorrendje';
 $strSetupServers_AllowDeny_rules_desc = 'Hagyja üresen az alapértelmezésekhez';
 $strSetupServers_AllowDeny_rules_name = 'Az állomás hitelesítési szabályai';
+$strSetupServers_AllowNoPassword_name = 'A jelszó nélküli bejelentkezés engedélyezése';
 $strSetupServers_AllowRoot_name = 'A root bejelentkezés engedélyezése';
 $strSetupServers_auth_swekey_config_desc = 'A [a@http://swekey.com]SweKey hardveres hitelesítés[/a] konfigurációs fájljának elérési útja (nem a dokumentumgyökérben található; javaslat: /etc/swekey.conf)';
 $strSetupServers_auth_swekey_config_name = 'SweKey konfigurációs fájl';
@@ -1040,6 +1056,7 @@ $strSetupServers_hide_db_desc = 'A (PCRE) reguláris kifejezéssel megegyező ad
 $strSetupServers_hide_db_name = 'Adatbázisok elrejtése';
 $strSetupServers_history_desc = 'Hagyja üresen, ha nincs szükség az SQL-lekérdezések előzményeinek támogatására, alapértelmezés: [kbd]pma_history[/kbd]';
 $strSetupServers_history_name = 'SQL-lekérdezések előzményeinek táblája';
+$strSetupServers_host_desc = 'Az állomás neve, ahol a MySQL-szerver fut';
 $strSetupServers_host_name = 'A szerver állomásneve';
 $strSetupServers_LogoutURL_name = 'Kijelentkezési URL';
 $strSetupServers_nopassword_desc = 'A csatlakozás jelszó nélküli megkísérlése';
@@ -1074,6 +1091,7 @@ $strSetupServers_user_desc = 'Hagyja üresen, ha nem a konfigurációs hitelesí
 $strSetupServers_user_name = 'A konfigurációs hitelesítés felhasználóneve';
 $strSetupServers_verbose_check_desc = 'Tiltsa le, ha tudja, hogy a pma_* táblák naprakészek. Ez megelőzi a kompatibilitási ellenőrzéseket, s ezáltal növeli a teljesítményt';
 $strSetupServers_verbose_check_name = 'Részletes ellenőrzés';
+$strSetupServers_verbose_desc = 'A szerver felhasználóbarát leírása. Hagyja üresen az állomásnév megjelenítéséhez.';
 $strSetupServers_verbose_name = 'A szerver részletes neve';
 $strSetupSetValue = 'Adja meg az értéket: %s';
 $strSetupShowAll_desc = 'Meg kell-e jeleníteni egy felhasználó számára az &quot;az összes (rekord) megjelenítése&quot; gombot';
@@ -1130,6 +1148,8 @@ $strSetupZipDumpExportWarning = 'A [a@?page=form&amp;formset=features#tab_Import
 $strSetupZipDumpImportWarning = 'A [a@?page=form&amp;formset=features#tab_Import_export]zipek kibontásához[/a] olyan függvényekre (%s) van szükség, melyek ezen a rendszeren nem elérhetőek.';
 $strSetupZipDump_name = 'ZIP';
 $strShowAll = 'Mind látható';
+$strShowBinaryContents = 'Bináris tartalom megjelenítése';
+$strShowBLOBContents = 'BLOB-tartalom megjelenítése';
 $strShowColor = 'Szín megjelenítése';
 $strShowDatadictAs = 'Adatkönyvtár formátum';
 $strShowFullQueries = 'Teljes lekérdezések megjelenítése';
@@ -1230,7 +1250,7 @@ $strShowStatusQcache_lowmem_prunesDescr = 'A lekérdezések száma, melyek eltá
 $strShowStatusQcache_not_cachedDescr = 'A nem gyorsítótárazott lekérdezések száma (nem gyorsítótárazható, vagy nem gyorsítótárazott a query_cache_type beállítás miatt).';
 $strShowStatusQcache_queries_in_cacheDescr = 'A gyorsítótárban bejegyzett lekérdezések száma.';
 $strShowStatusQcache_total_blocksDescr = 'A blokkok száma a lekérdezési gyorsítótárban.';
-$strShowStatusReset = 'Reset';
+$strShowStatusReset = 'Törlés';
 $strShowStatusRpl_statusDescr = 'A hibabiztos többszörözések állapota (megvalósításra vár).';
 $strShowStatusSelect_full_joinDescr = 'Az indexeket nem használó illesztések száma. Ha ez az érték nem 0, akkor ellenőrizze körültekintően a táblák indexeit.';
 $strShowStatusSelect_full_range_joinDescr = 'Egy hivatkozási táblán tartománykeresést használt illesztések száma.';
@@ -1284,6 +1304,7 @@ $strStandInStructureForView = 'A nézet helyettes szerkezete';
 $strStatCheckTime = 'Utolsó ellenőrzés';
 $strStatCreateTime = 'Létrehozás';
 $strStatement = 'Utasítások';
+$strStatic = 'statikus';
 $strStatisticsOverrun = 'Foglalt szerveren túlfuthatnak a bájtszámlálók, ezért a MySQL által jelentett statisztikák pontatlanok lehetnek.';
 $strStatUpdateTime = 'Utolsó frissítés';
 $strStatus = 'Állapot';
@@ -1442,25 +1463,4 @@ $strYes = 'Igen';
 $strZeroRemovesTheLimit = 'Megjegyzés: Ezen beállítások 0-ra (nulla) állítása eltávolítja a korlátozást.';
 $strZip = '"zip tömörítés"';
 
-$strSessionGCWarning = 'Your PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] is lower that cookie validity configured in phpMyAdmin, because of this, your login will expire sooner than configured in phpMyAdmin.';  //to translate
-$strSetupServers_host_desc = 'Hostname where MySQL server is running';  //to translate
-$strSetupServers_verbose_desc = 'A user-friendly description of this server. Leave blank to display the hostname instead.';  //to translate
-$strCreateUserDatabasePrivileges = 'Grant all privileges on database &quot;%s&quot;';  //to translate
-$strShowBinaryContents = 'Show binary contents';  //to translate
-$strShowBLOBContents = 'Show BLOB contents';  //to translate
-$strStatic = 'static';  //to translate
-$strLoginWithoutPassword = 'Login without a password is forbidden by configuration (see AllowNoPassword)';  //to translate
-$strSetupServerNoPasswordMsg = 'You allow for connecting to the server without a password.';  //to translate
-$strSetupServers_AllowNoPassword_name = 'Allow logins without a password';  //to translate
-$strHostTableExplanation = 'When Host table is used, this field is ignored and values stored in Host table are used instead.';  //to translate
-$strGetMoreThemes = 'Get more themes!';  //to translate
-$strNoneDefault = 'None';  //to translate
-$strConfigDirectoryWarning = 'Directory [code]config[/code], which is used by the setup script, still exists in your phpMyAdmin directory. You should remove it once phpMyAdmin has been configured.';  //to translate
-$strRemoveCRLF = 'Remove CRLF characters within fields';  //to translate
-$strDoNotAutoIncrementZeroValues = 'Do not use AUTO_INCREMENT for zero values';  //to translate
-$strAndSmall = 'and';  //to translate
-$strReplicationStatus = 'Replication status';  //to translate
-$strReplicationStatusInfo = 'This MySQL server works as %s in <b>replication</b> process. For further information about replication status on the server, please visit the <a href="#replication">replication section</a>.';  //to translate
-$strReplicationStatus_master = 'Master status';  //to translate
-$strReplicationStatus_slave = 'Slave status';  //to translate
 ?>
