@@ -72,6 +72,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + [lang] Norwegian update, thanks to Sven-Erik Andersen 
 + [lang] Catalan update, thanks to Xavier Navarro
 + [lang] Finnish update, thanks to Jouni Kahkonen
++ [lang] Hungarian update, thanks to Jozsef Tamas Herczeg - dodika 
 
 3.1.6.0 (not yet released)
 - bug #2785912 [doc] no ON UPDATE CURRENT_TIMESTAMP in list of attributes
